fix: replace json.org with jackson, also introduce POJO generator based on JSON schema
still have failing test cases around MessageStrings.